--- a/mod-2/index.html
+++ b/mod-2/index.html
@@ -12,7 +12,7 @@
     <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-12">
             <section>
-                <h3>Fish</h3>
+                <h3 id="t1">Fish</h3>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam fugiat repudiandae fugit porro commodi amet possimus sit atque, non obcaecati, et repellendus enim perferendis nobis quibusdam vero nulla magni quaerat!
                 </p>
@@ -20,7 +20,7 @@
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
             <section>
-                <h3>Beef</h3>
+                <h3 id="t2">Beef</h3>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam fugiat repudiandae fugit porro commodi amet possimus sit atque, non obcaecati, et repellendus enim perferendis nobis quibusdam vero nulla magni quaerat!
                 </p>
@@ -28,7 +28,7 @@
         </div>
         <div class="col-lg-4 col-md-12 col-sm-12">
             <section>
-                <h3>Chicken</h3>
+                <h3 id="t3">Chicken</h3>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam fugiat repudiandae fugit porro commodi amet possimus sit atque, non obcaecati, et repellendus enim perferendis nobis quibusdam vero nulla magni quaerat!
                 </p>
